--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require jquery-ui/datepicker
  *= require jquery.mobile
+ *= require jquery.mobile.datepicker
  */
