--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,24 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :title, class: 'ui-hidden-accessible' %>
+    <%= f.text_field :title, placeholder: 'Title' %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.label :description, class: 'ui-hidden-accessible' %>
+    <%= f.text_area :description, placeholder: 'Description' %>
   </div>
   <div class="field">
-    <%= f.label :start %><br>
-    <%= f.date_select :start %>
+    <%= f.label :start %>
+    <%= f.text_field :start, 'data-role' => 'date' %>
   </div>
   <div class="field">
-    <%= f.label :end %><br>
-    <%= f.date_select :end %>
+    <%= f.label :end %>
+    <%= f.text_field :end, 'data-inline' => 'false', 'data-role' => 'date' %>
   </div>
   <div class="field">
-    <%= f.label :rate %><br>
-    <%= f.number_field :rate %>
+    <%= f.label :rate %>
+    <%= f.range_field :rate, in: 0..5, step: 1 %>
   </div>
   <div class="actions">
     <%= f.submit %>
